# isp-billing-backend

./: .gitignore  README.md  alembic.ini  build.sh  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_db.py
.github/workflows/: deploy.yml
.next/: trace  trace-build
.next/cache/: .previewinfo  .rscinfo
KubeSecrets/: .gitignore  devENV.yml
alembic/: env.py
alembic/versions/: 007dd95a58a0_add_ui_management_models.py  092bd52af6a2_add_configuration_version_tracking_to_.py  279ffe74982f_merge_migration_heads.py  3aae684d6ae6_fix_model_relationships_and_foreign_keys.py  3ced4a9f40aa_initial_migration.py  402f80a6d1a7_merge_multiple_heads.py  4a2822ac5c07_add_licence_enforcement_columns_to_.py  51b3cf691430_add_provisioning_models_and_tables.py  6df4d4bf3799_add_timestamps_to_supportticket_and_.py  6e331a3d608f_initial_fresh_start.py  70e401e50c75_initial_migration_recreated.py  7c4d19524c5d_initial.py  7f442b4e719a_add_whatsapp_payment_collection_fields.py  97cc278fcb46_merge_sms_settings_migration.py  99d8de282dcb_add_licence_management_package_.py  a1b2c3d4e5f6_add_router_command_and_agent_fields.py  a2f8c94d1e3b_add_2fa_totp_columns_to_user_settings.py  a7b8c9d0e1f2_add_auth_tenant_id_on_organizations.py  aab6ee1906ab_add_provisioning_models_and_tables.py  add_hotspot_credentials_to_vouchers.py  add_hotspot_user_settings.py  add_platform_sms_settings.py  add_rbac_tables.py  add_router_credentials_storage.py  add_router_system_info_fields.py  add_winbox_remote_access.py  b2c3d4e5f6a7_router_backups_and_active_users.py  b5bb1c5a4c50_initial_migration.py  b8c9d0e1f2a3_drop_deprecated_billing_licence_tables.py  c3d4e5f6a7b8_add_wireguard_vpn_columns.py  c6da21dc210e_initial_migration.py  c998761fc519_add_organization_id_to_sms_credit_.py  c9d0e1f2a3b4_add_duration_minutes_on_service_plans.py  d0e1f2a3b4c5_add_file_data_on_router_backups.py  d4e5f6a7b8c9_add_sso_jit_columns_on_users.py  e1f2a3b4c5d6_drop_sms_credit_whatsapp_tables.py  e5f6a7b8c9d0_add_treasury_payment_intent_id_on_customer_purchases.py  f6a7b8c9d0e1_add_outbox_events_table.py  make_payment_gateway_org_nullable.py
app/: __init__.py  main.py
app/api/: deps.py  deps_org.py  deps_tenant.py
app/common/: __init__.py  pagination.py  responses.py
app/core/: celery.py  config.py  database.py  datetime_utils.py  encryption.py  errors.py  exceptions.py  licence_middleware.py  logging.py  rbac_decorators.py  redis.py  secrets.py  security.py  seed_middleware.py  seed_service.py  sso.py  tenant_middleware.py  url_config.py
app/events/: __init__.py  consumer.py  nats.py  outbox.py
app/integrations/: __init__.py  base.py  mikrotik.py  mpesa.py
app/models/: __init__.py  base.py  billing.py  campaign.py  configuration.py  customer_portal.py  email.py  email_gateway.py  expense.py  lead.py  licence.py  notification.py  organization.py  outbox.py  package_template.py  payment_gateway.py  plan.py  platform_billing.py  platform_settings.py  provisioning.py  rbac.py  router.py  router_command.py  sms_credit.py  subscription.py  system_log.py  user.py  user_settings.py  whatsapp.py
app/modules/: __init__.py
app/schemas/: __init__.py  auth.py  billing.py  campaign.py  configuration.py  email.py  expense.py  lead.py  licence.py  mpesa.py  notification.py  plan.py  provisioning.py  rbac.py  router.py  router_agent.py  sms_credit.py  subscription.py  system_log.py  ticket.py  ui.py  user.py
app/services/: advanced_analytics_service.py  auth_branding_client.py  auth_service.py  billing_service.py  configuration_service.py  gateway_management_service.py  hotspot_dashboard_bridge.py  initialization_service.py  mpesa_service.py  notifications_client.py  package_template_service.py  ping_monitor.py  plan_service.py  provider_gate.py  provisioning_service.py  router_agent.py  router_provisioning.py  router_service.py  subscriptions_client.py  treasury_client.py  treasury_topup.py  user_service.py  wireguard.py
app/tasks/: billing_tasks.py  event_tasks.py  licence_tasks.py  notification_tasks.py  provisioning_tasks.py  router_tasks.py  subscription_tasks.py
app/utils/: __init__.py  credentials.py  hotspot_username.py  tenant.py
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
docs/: API_DOCUMENTATION.md  AUDIT-AND-REMEDIATION-2026-06.md  AUTH_IMPLEMENTATION.md  AUTH_MAPPING.md  BUG_FIXES.md  IMPLEMENTATION_GUIDE.md  MIKROTIK_PROVISIONING_GUIDE.md  PLATFORM-TENANT-SEPARATION.md  PROJECT_SUMMARY.md  PROVISIONING_GUIDE.md  SETUP_GUIDE.md  backend-audit.md  mikrotikv6-v7-comparison.md  openapi.json  payment-gateway-integration.md  payout-configuration.md  plan.md  reset-router-provision.md  sms-integration.md  swagger_authentication_guide.md
scripts/: README.md  SCRIPTS_README.md  add_default_org.py  check_demo_seeds.py  check_password.py  check_routers.py  check_user.py  cleanup_accounts_simple.py  create_admin.py  create_fresh_database.py  direct_auth_test.py  drop_db.py  init_db.py  list_orgs.py  list_users.py  reset_schema.py  run_prod_seed.py  run_seeds.py  seed_all.py  seed_demo_users.py  seed_env.py  seed_licences.py  seed_organizations.py  seed_plans.py  seed_rbac.py  seed_routers.py  seed_sms_templates.py  seed_subscriptions.py  seed_users.py  setup.bat  setup.sh  setup_complete.py
scripts/seeds/: __init__.py  add_default_org.py  seed_all.py  seed_demo_users.py  seed_env.py  seed_licences.py  seed_plans.py  seed_rbac.py  seed_subscriptions.py
scripts/tools/: __init__.py  check_db_schema.py  check_ftp_status.py  check_migrations.py  (+9 more)
tests/: MPESA_TEST_SUMMARY.md  README.md  conftest.py  mikrotik_provisioning_test.py  test_auth.py  test_billing.py  test_ftp_direct.py  test_ftp_simple.py  test_mpesa_api.py  test_mpesa_integration.py  test_mpesa_schemas.py  test_mpesa_service.py  test_paystack_transfers.py  test_provisioning.py  test_provisioning_commands.py  test_provisioning_network_calc.py  test_provisioning_notify.py  test_router_connectivity.py  test_runner.py  test_sms_credit_api.py  test_sms_providers.py  test_template_upload.py  test_users.py
(+178 files in other folders)
